<resources>
    <string name="app_name">PUBManager</string>

    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptune">Neptune</string>
    <string name="pluto">Pluto</string>

    <string name="mercury_sub" formatted="false">Recurring Category.</string>
    <string name="venus_sub" formatted="false">Recurring Category</string>
    <string name="earth_sub" formatted="false">Recurring Category</string>
    <string name="mars_sub" formatted="false">Recurring Category</string>
    <string name="jupiter_sub" formatted="false">Recurring Category</string>
    <string name="saturn_sub" formatted="false">Recurring Category</string>
    <string name="uranus_sub" formatted="false">Recurring Category</string>
    <string name="neptune_sub" formatted="false">Recurring Category</string>
    <string name="pluto_sub" formatted="false">Recurring Category</string>


    <string name="Menu">Menu</string>
    <string name="categories">Spending Categories</string>
    <string name="statistics">Spending Statistics</string>
    <string name="expenses">Expenses</string>
    <string name="categoryExpenses">Category Expenses</string>

    <string name="shared">Shared</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>

</resources>