<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Home">
        <menu>
            <item android:id="@+id/action_settings" android:title="@string/Menu"
                android:icon="@drawable/ic_baseline_star_24" />

            <item android:title="@string/categories"  android:id="@+id/categories"
                android:icon="@drawable/ic_baseline_star_24" />

            <item android:title="@string/statistics" android:id="@+id/statistics"
                android:icon="@drawable/ic_baseline_star_24" />

            <item android:title="@string/expenses" android:id="@+id/expenses"
                android:icon="@drawable/ic_baseline_star_24" />

            <item android:title="@string/categoryExpenses" android:id="@+id/categoryExpenses"
                android:icon="@drawable/ic_baseline_star_24" />

        </menu>
    </item>

    <item android:title="APP">
        <menu>
            <item android:title="Settings"
                android:icon="@drawable/ic_baseline_settings_applications_24" />
            <item android:title="Log Out"  android:id="@+id/signout"
                android:icon="@drawable/ic_baseline_power_settings_new_24" />
        </menu>
    </item>

</menu>