<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.HomeActivity">

        <View
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:id="@+id/bg_top_header"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/ic_bg_topheader"/>

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="71dp"
            android:layout_height="71dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textSize="13sp"
            android:id="@+id/user_name"
            android:textColor="#ffffff"
            android:fontFamily="@font/mo_re"
            android:layout_marginTop="32dp"
            android:layout_marginStart="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/user_photo"
            app:layout_constraintTop_toTopOf="parent"/>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="110dp"
            android:layout_marginBottom="60dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:padding="14dp"
            android:rowCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/bg_top_header"
            app:layout_constraintVertical_bias="0.0"
            app:layout_editor_absoluteX="0dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/cardColor"
                android:id="@+id/categoriesCard"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="76dp"
                        android:layout_height="68dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/categories_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/mo_re"
                        android:text="@string/categories"
                        android:textColor="@color/textcardColor"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/cardColor"
                android:id="@+id/userAnalytics"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="89dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/statistcs_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statistics"
                        android:textColor="@color/textcardColor"
                        android:textSize="11sp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/mo_re"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/cardColor"
                app:cardCornerRadius="8dp"
                android:id="@+id/expensesCard"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="68dp"
                        android:layout_height="31dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/non_recurring_payments_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expenses"
                        android:textColor="@color/textcardColor"
                        android:textSize="11sp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/mo_re"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/cardColor"
                android:id="@+id/categoryExpenses"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="58dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/icon_03" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categoryExpenses"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/textcardColor"
                        android:textSize="11sp"
                        android:fontFamily="@font/mo_re"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/expenseSources"
                android:background="@color/cardColor"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="71dp"
                        android:layout_height="33dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/non_recurring_payments_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Expense Sources"
                        android:textColor="@color/textcardColor"
                        android:textSize="11sp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/mo_re"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/cardColor"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/transactions_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Scheduled Payments"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/textcardColor"
                        android:textSize="11sp"
                        android:fontFamily="@font/mo_re"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
